--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
+							<li><a target="_blank" href="https://github.com/Pisanuwat-B" class="icon brands fa-github"><span class="label">Email</span></a></li>
 							<li><a target="_blank" href="https://www.facebook.com/pisanuwat.bupphanchart" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a target="_blank" href="https://twitter.com/PisanuwatB" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a target="_blank" href="https://www.instagram.com/pisanununu/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
