--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<div class="time-row left">
 									<div class="time-container">
 										<div class="time-content">
-											<h4>Sirindhorn International Institute of Technology,<br />
-											Thammasat University</h4>
+											<h4>Thammasat University,<br />
+											Sirindhorn International Institute of Technology</h4>
 											<p>Bachelor  of Computer engineering</p>
 											<p>GPA: 3.20</p>
 										</div>
@@ -158,12 +158,11 @@
 								</div>
 								<div class='about-detail'>
 									<p><b>Date of birth : </b>17 September 1994</p>
-									<p><b>Place of birth : </b>Prachinburi</p>
 									<p><b>Personality : </b> Fast learner, Responsible, Friendly</p>
 									<p><b>Religion : </b>Buddhist</p>
 									<p><b>Height / weight : </b>169cm / 65kg </p>
 									<p><b>Nationality : </b>Thai<br />
-									<p><b>Language : </b>Thai ( Native ) , English ( Intermediate )</p>
+									<p><b>Language : </b>Thai ( Native ) , English ( Excellent )</p>
 									<p><b>Contact : </b>Tel 086-8258027</p>
 									<p><b>Email : </b>pisanuwat.b@gmail.com</p>
 								</div>
